--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,13 +24,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Set up miniconda
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        miniconda-version: "latest"
-        activate-environment: merlin
     - name: Install geos for shapely
-      run: conda install geos
+      run: sudo apt-get install libgeos-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
