--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,6 +33,8 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install package
       run: python -m pip install -e .
+    - name: Mock .merlinenv
+      run: printf 'DATA_HOME=~\nANALYSIS_HOME=~\nPARAMETERS_HOME=~\n' >.merlinenv
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
