--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,13 +25,15 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
+        cache-dependency-path: |
+          'requirements.txt'
+          'setup.py'
     - name: Install geos for shapely
       run: sudo apt-get install libgeos-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
     - name: Install package
       run: python -m pip install -e .
     - name: Mock .merlinenv
